fix(StringValidator): 커스텀 구분자가 추가되지않는 에러 수정